# jacl

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.8d264ec.22  README.md  jacl-config.cmake.in
example/: CMakeLists.txt  controller_dialog.cpp  controller_dialog.h  controller_sim.h  main.cpp  mainwindow.cpp  mainwindow.h  observer.h  observer_sim.h  posctrl_sim.h  spdctrl_sim.h  system_sim.h
example/gui/: dark_style_lintang.qss
examples/: CMakeLists.txt
examples/basic_linalg/: CMakeLists.txt  basic_linalg1.cpp
examples/control_sim/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
examples/control_sim/gui/: dark_style_lintang.qss
include/: CMakeLists.txt  are.h  controller.h  controller_dialog.h  controller_sim.h  defs.h  h_infinity_synthesis.h  jacl  lft.h  linear_algebra.h  lower_lft.h  lti_common.h  mainwindow.h  observer.h  observer_sim.h  physical_parameter.h  pole_placement.h  posctrl_sim.h  sim.h  sim.h.autosave  simulator.h  simulator2.h  state_space.h  system_sim.h  traits.h  transfer_matrix.h  upper_lft.h
include/jacl/: are.h  are.hpp  controller_sim.h  dare.hpp  defs.h  defs.hpp  h_infinity_synthesis.hpp  ifd.hpp  jacl.hpp  lft.h  lft.hpp  linear_algebra.hpp  linear_state_space.hpp  lower_lft.hpp  lti_common.h  lti_common.hpp  medium.hpp  nonlinear_state_space.hpp  numerical_methods.h  numerical_methods.hpp  observer.h  observer_sim.h  parser.h  parser.hpp  physical_parameter.hpp  plotter.hpp  pole_placement.h  pole_placement.hpp  posctrl_sim.h  py_stuff.hpp  random.hpp  sim.h  sim.hpp  simulator.h  spdctrl_sim.h  state_space.h  state_space.hpp  system_sim.h  traits.h  traits.hpp  (+4 more)
include/jacl/analysis/: analysis.hpp  transient.hpp
include/jacl/diagnosis/: ifd.hpp  sifd.hpp
include/jacl/lft/: lft.hpp  lower.hpp  upper.hpp
include/jacl/pattern/: observer.hpp  singleton.hpp
include/jacl/state_space/: linear.hpp  nonlinear.hpp
include/jacl/synthesis/: dh_inf.hpp  h_inf.hpp
include/jacl/system/: base_system.hpp  continuous.hpp  continuous_observer.hpp  continuous_system.hpp  discrete.hpp  discrete_observer.hpp  discrete_system.hpp  observer.hpp
log/: manual_log.txt
matlab/: matlab_ver.m
python/: DC_Motor_Response.py  aux_schur.py  observer_sim.py  plotter.py  run_plotter.py  simulator.py
sample/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_bias_fault_05235_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_dead_zone_fault_01745_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_no_fault_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_positon_controller_ref_90_-_23_05_2020/: current_sample.txt  position_sample.txt  speed_sample.txt
sample/response_scale_fault_09_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_scale_fault_12_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/response_speed_controller_ref_102_-_23_05_2020/: current_sample.txt  position_sample.txt  speed_sample.txt
sample/sifd_real_response_31_05_2020_bias_fault_0523/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/sifd_real_response_31_05_2020_no_fault/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/sifd_real_response_31_05_2020_scale_fault_09/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/sifd_real_response_31_05_2020_scale_fault_12/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/spd_response_scale_fault_12_07_06_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
sample/speed_response_31_05_2020/: current_sample.txt  error_current_sample.txt  error_speed_sample.txt  position_sample.txt  speed_sample.txt
script/: motor_dc_simo.jacl  observer_gain.jacl  position_controller.jacl  run_control_sim.sh  speed_controller.jacl
src/: binder.cpp  controller_dialog.cpp  embed_test.cpp  hello.cpp  main.cpp  mainwindow.cpp  state_space.cpp  transfer_matrix.cpp
test/: hinf_test.py
